Header and breadcrumb spacing on mobile. Fixes #124

--- a/_themes/open5e_red_theme/static/css/theme.css
+++ b/_themes/open5e_red_theme/static/css/theme.css
@@ -4709,7 +4709,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
     margin-left: 0;
   }
   .wy-nav-content-wrap .wy-nav-content {
-    padding: 1.618em;
+    padding: 4.854em 1.618em;
   }
   .wy-nav-content-wrap.shift {
     position: fixed;
