--- a/_themes/sass/_theme_layout.sass
+++ b/_themes/sass/_theme_layout.sass
@@ -426,7 +426,7 @@ footer
   .wy-nav-content-wrap
     margin-left: 0
     .wy-nav-content
-      padding: $gutter
+      padding: $gutter*3 $gutter
     &.shift
       position: fixed
       min-width: 100%
